Gravatar css alignment fix

--- a/assets/css/benchmarks.less
+++ b/assets/css/benchmarks.less
@@ -237,8 +237,9 @@ em {
 
 .gravatar {
   float: left;
-  margin-bottom: 1em;
+	margin-bottom: 1em;
 }
+.block .gravatar { margin: 10px; }
 
 .comment {
   line-height: 1.75em;
